--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,6 +1,6 @@
 .form {
   width: 100%;
-  
+
   &-field + &-field {
     margin-top: 0.5rem;
   }
@@ -35,7 +35,8 @@
     display: flex;
   }
 
-  &--custom, &--textarea {
+  &--custom,
+  &--textarea {
     padding: 1rem;
     min-height: 10rem;
   }
